--- a/Web/index.html
+++ b/Web/index.html
@@ -56,7 +56,7 @@
                                                 <li><a href="index.html"><img src="assets/images/home10.png"></a></li>
                                                 <li><a href="bloginner.html"><img src="assets/images/home12.png"></a></li>
                                                 <li><a href="https://github.com/toeiisk/PROJECT-PSIT" target="blank"><img src="assets/images/home11.png"></a></li>
-                                                <li><a href="https://github.com/toeiisk/PROJECT-PSIT" target="blank"><img src="assets/images/home13.png"></a></li>
+                                                <li><a href="https://www.youtube.com/watch?v=69RARiQNd1s&t" target="blank"><img src="assets/images/home13.png"></a></li>
                                         </ul>
                                     </div>
                                 </div>
@@ -97,8 +97,8 @@
                                             <h3>What is</h3>
                                             <h4>Bitcoin?</h4>
                                             <div class="separator2"></div>
-                                            <p>&emsp;&emsp;&emsp;&emsp;Bitcoin อ่านว่าบิทคอยน์ คือสกุลเงินในรูปแบบของดิจิทัล        ถูกสร้างขึ้นมาด้วยภาษาคอมพิวเตอร์ ไม่มีใครเป็นเจ้าของ Bitcoin ไม่มีรูปร่างและไม่สามารถจับต้องได้เหมือนธนบัตรหรือเหรียญเงินบาท Bitcoin ถูกสร้างขึ้นมาด้วยกลุ่มนักพัฒนาเล็กๆกลุ่มหนึ่งตลอดจนบริษัทใหญ่ๆทั่วโลก โดยระบบของ Bitcoin ถูกรันโดยคอมพิวเตอร์ของผู้ใช้งานทั่วโลก โดยใช้ระบบซอฟต์แวร์ในการถอดสมการคณิตศาสตร์</p>
-                                            <p>นักพัฒนาด้านซอฟต์แวร์ผู้ใช้นามแฝงว่า<strong> ซาโตชิ นาคาโมโตะ</strong> เป็นผู้พัฒนา Bitcoin ขึ้นมาซึ่งเป็นระบบจ่ายเงินที่อ้างอิงอยู่บนการถอดสมการคณิตศาสตร์ โดยจุดประสงค์ของเขาคือการสร้างสกุลเงินที่เป็นอิสระจากรัฐบาลและธนาคาร, สามารถส่งหากันผ่านระบบอินเทอร์เนตและมีค่าธรรมเนียมที่ถูกมากๆ</p>
+                                            <p>&emsp;&emsp;&emsp;&emsp;Bitcoin อ่านว่าบิทคอยน์ คือสกุลเงินในรูปแบบของดิจิทัล ถูกสร้างขึ้นมาด้วยภาษาคอมพิวเตอร์ ไม่มีใครเป็นเจ้าของ Bitcoin ไม่มีรูปร่างและไม่สามารถจับต้องได้เหมือนธนบัตรหรือเหรียญเงินบาท Bitcoin ถูกสร้างขึ้นมาด้วยกลุ่มนักพัฒนาเล็กๆกลุ่มหนึ่งตลอดจนบริษัทใหญ่ๆทั่วโลก โดยระบบของ Bitcoin ถูกรันโดยคอมพิวเตอร์ของผู้ใช้งานทั่วโลก โดยใช้ระบบซอฟต์แวร์ในการถอดสมการคณิตศาสตร์</p>
+                                            <p>นักพัฒนาด้านซอฟต์แวร์ผู้ใช้นามแฝงว่า <strong>ซาโตชิ นาคาโมโตะ</strong> เป็นผู้พัฒนา Bitcoin ขึ้นมาซึ่งเป็นระบบจ่ายเงินที่อ้างอิงอยู่บนการถอดสมการคณิตศาสตร์ โดยจุดประสงค์ของเขาคือการสร้างสกุลเงินที่เป็นอิสระจากรัฐบาลและธนาคาร, สามารถส่งหากันผ่านระบบอินเทอร์เนตและมีค่าธรรมเนียมที่ถูกมากๆ</p>
 
                                         </div>
                                     </div>
@@ -403,9 +403,9 @@
                                             <ul class="whitetext">
                                                 <center>
                                                 <li><a href="https://siamblockchain.com" target="blank"><strong><h3>Siamblockchain</strong></h3></a></li>
-                                                <li><a href="https://www.bitcoin.com/widgets" target="blank"><strong><h3>Bitcoin.com</strong></h3></a></li>
-                                                <li><a href="https://gobitcoin.io/tools/widget/" target="blank"><strong><h3>Gobitcoin.io</strong></h3></a></li>
-                                                <li><a href="https://www.coingecko.com/en/widgets" target="blank"><strong><h3>CoinGecko</strong></h3></a></li>
+                                                <li><a href="https://www.kaggle.com/datasets" target="blank"><strong><h3>Kaggle</strong></h3></a></li>
+                                                <li><a href="https://trends.google.co.th/trends/?geo=TH" target="blank"><strong><h3>Google Trends</strong></h3></a></li>
+                                                <li><a href="https://www.blockchain.com/" target="blank"><strong><h3>Blockchain</strong></h3></a></li>
                                                 </center>
                                             </ul>
                                         </div>
